@@ -2,3 +2,4 @@ a.out
 *.[o,so,a,lib,dylib]
 build/
 .DS_Store
+cmocka/*_test
