@@ -1,3 +1,7 @@
 # date '+%A %B %m %Y'
 * Sat Feb 06 2021  fuyichin<fuyichin@gmail.com>
-- add in cmocka directory, Makefile and sample program
+- update debug_level defination
+- new function: gntp_get_header_value(), return the header value from GNTP
+- test cases for gntp_get_header_value()
+- fix run_test_case issue in Makefile
+- add in VSCode setting file
